views/index.sass
/* reset */ /*-------------------------------------------------------------------------------------------*/

html, body, div, span, 
h1, h2, h3, h4, h5, h6,
p, blockquote, img,
a, abbr, cite, q, strong, sub, sup, 
dl, dt, dd, ol, ul, li 
  margin: 0
  padding: 0
  border: 0
  outline: 0
  font-weight: inherit
  font-style: inherit
  font-size: 100%
  font-family: inherit
  vertical-align: baseline

\:focus
  outline: 0

body
  line-height: 1
  color: black
  background: white

ol, ul
  list-style: none

blockquote:before, blockquote:after,
q:before, q:after
  content: ""

blockquote, q
  quotes: "" ""


/* layout */ /*-------------------------------------------------------------------------------------------*/

html, body
  height: 100%

.page_bar_wrap
  float: left
  width: 230px
  left: 0px
  position: fixed
  height: 100%
  top: 0
  z-index: 1000

.wrapper
  height: auto !important
  min-height: 100%
  height: 100%
  position: relative

.content_wrap
  margin-left: 230px
  padding-bottom: 180px

.progress
  height: 180px
  position: absolute
  bottom: 0
  left: 0
  width: 100%


/* style */ /*-------------------------------------------------------------------------------------------*/

body
  font-family: "Source Sans Pro", "Open Sans", Helvetica, sans-serif
  background-image: url("/images/site-bg.png")
  background-repeat: no-repeat
  background-color: #63818c
  background-attachment: fixed
  color: #92a6ac
  font-weight: 300

.page_bar_wrap
  background-color: rgba(00, 00, 00, 0.3)
  font-size: 28px
  a:link, a:visited, a:active, a:focus
    :color #b1c3c9
    :text-decoration none
  a:hover
    :color #b1c3c9

#page_bar
  background-color: rgba(127, 177, 200, 0.1)

#page_menu li
  height: 80px
  text-align: right

.li
  padding-top: 25px
  padding-right: 37px

.current_tab
  background-image: url("/images/site-vertical-focus.png")
  background-size: 230px 80px
  background-repeat: no-repeat
  background-position: right

#name_wrap
  position: fixed
  bottom: 0
  padding-left: 39px
  padding-bottom: 37px

#logo
  height: 57px
  width: 145px
  background-image: url("/images/site-logo.png")
  background-size: 145px 57px
  background-repeat: no-repeat

#page_name
  padding-top: 15px
  font-size: 17px
  font-weight: bold

.content_wrap
  color: #e3ebed

.content
  padding-left: 50px
  padding-top: 30px

.page_header
  padding-bottom: 30px
  font-size: 25px
  color: #98bbc3

.progress
  color: #e3ebed

.progress_background
  background-color: rgba(45, 91, 112, 0.2)
  height: 180px
  margin-left: 230px
  padding-top: 30px
  padding-left: 30px
  padding-right: 30px
  padding-bottom: 30px

.monospace
  font-family: monospace

.progress_header
  padding-bottom: 20px
  font-size: 18px

.clear
  clear: both






#sdk_version
  line-height: 1.5em
  width: 350px
  float: left






#sdk_upgrade
  padding-top: 8px

#add_target_wrap
  width: 330px
  float: right
  color: #6ec9e0
  line-height: 2em

.targets_header
  color: #6ec9e0

.parameter
  padding-bottom: 15px

.parameter_name
  font-weight: bold

.element_name
  padding-right: 120px
  font-weight: bold

.element_name a
  padding-bottom: 2px
  padding-left: 10px
  padding-right: 10px
  background-color: rgba(0, 160, 212, 0.3)

.element_manage
  padding-right: 10px

.manage_link
  padding-bottom: 2px
  padding-left: 10px
  padding-right: 10px
  background-color: rgba(0, 160, 212, 0.3)
  color: #e3ebed
  text-decoration: none
  border: none

.packages_link:hover
  color: #1b2a44
  text-decoration: underline

#add_from_list
  padding-top: 10px

input
  padding-bottom: 2px
  padding-left: 10px
  padding-right: 10px
  background-color: rgba(0, 160, 212, 0.3)
  border: none
  color: #e3ebed

input[disabled]
  background-color: transparent

.button
  margin-right: 7px
  radius: 8px

.button:hover
  color: #1b2a44

.styled_select select
  background: transparent
  width: 300px
  font-size: 16px
  line-height: 1
  border: 0
  border-radius: 0
  height: 24px
  appearance: none
  -moz-appearance: none
  -webkit-appearance: none
  background-color: rgba(188, 207, 207, 0.5)
  color: #e3ebed

.styled_select
  width: 280px
  height: 24px
  overflow: hidden
  background-image: url("/images/site-dropdown.png")
  background-repeat: no-repeat
  background-position: right

#text_field1, #text_field2
  background-color: rgba(188, 207, 207, 0.5)
  color: #e3ebed
  width: 260px

.fixed_width
  width: 110px

